--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Portfolio # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: My Portfolio # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -37,8 +37,8 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Julien Bilderberg
-  email: example@domain.com # change to your email address
+  name: Yassine Mahroug
+  email: yassinemahroug38@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username # change to your twitter homepage
@@ -80,7 +80,7 @@ theme_mode: dark
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://avatars.githubusercontent.com/u/130282987?v=4
 
 # boolean type, the global switch for TOC in posts.
 toc: true
